solve overflow header issues

--- a/css/index.css
+++ b/css/index.css
@@ -24,14 +24,14 @@ html {
 header {
   background-color: transparent;
   font-size: 1.2rem;
-  left: 0;
+  /* left: 0; */
   margin-top: 1rem;
   margin-bottom: 1rem;
   overflow: hidden;
-  padding: 1% 10% 1% 10%;
+  padding: 5% 10% 5% 10%;
   position: absolute;
   text-align: left;
-  top: 0;
+  /* top: 0; */
   width: 100%;
   height: 100%;
 }
@@ -297,8 +297,12 @@ img {
 /* 4. Responsiveness (use of mobile vs desktops) */
 
 @media screen and (max-width: 799px) {
+  header {
+    z-index: 1;
+  }
   .topnav {
     clear: both;
+    /* min-height: 0; */
   }
   .description {
     font-size: 1.2rem;
